# unlocked-client

./: .gitmodules  .indent.pro  CMakeLists.txt  Makefile  Readme.md
.github/actions/beautify/: Dockerfile  action.yaml  stylecheck
.github/workflows/: main.yaml
conf/: unlocked.conf
doc/: configuration.md  installation.md
packaging/aur/: PKGBUILD
packaging/systemd/: CMakeLists.txt  initrd-unlocked-client@.service.in  initrd-unlocked-client@.socket.in  unlocked-client@.service.in  unlocked-client@.socket.in
src/: CMakeLists.txt  cli.c  cli.h  client.c  client.h  error.c  error.h  http-client.c  http-client.h  https-client.c  https-client.h  log.c  log.h  main.c  sockets.c  sockets.h  version.h.in
src/mod/: CMakeLists.txt  mod_sd_socket.c  mod_sd_socket.h  mod_stdout.c  mod_stdout.h  module.c  module.h
tests/: CMakeLists.txt  check_cli.c  check_cli.h  check_https-client.c  check_https-client.h  check_unlocked_client.c
tests/mod/: CMakeLists.txt  check_module.c  check_module.h
